# popsicle-vst

./: CMakeLists.txt  README.rst  REFACTOR_SPLITTING.md  pyproject.toml  setup.py
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  coverage.yml  wheels.yml
cmake/: ArchivePythonStdlib.py
demos/plugin/: CMakeLists.txt  PopsiclePluginEditor.cpp  PopsiclePluginEditor.h  PopsiclePluginProcessor.cpp  PopsiclePluginProcessor.h
demos/standalone/: CMakeLists.txt
examples/: animated_component.py  audio_player.py  audio_player_waveform.py  emojis_component.py  emojis_font_component.py  juce_o_matic.py  layout_flexgrid.py  layout_rectangles.py  slider_decibels.py  slider_values.py  table_list_box.py  wavetable_oscillator.py
examples/wip/: audio_callback_cpp.py  audio_player_cpp.py  synth_midi_input.py
modules/juce_python/: juce_python.h
modules/juce_python/bindings/: ScriptJuceGraphicsBindings.cpp  ScriptJuceGraphicsBindings.h  ScriptJuceGuiEntryPointsBindings.cpp
tests/test_juce_core/: test_Cast.py
